@@ -1,3 +1,4 @@
+lblPicture = Picture
 lblItemsPerPage = Items per page:
 lblImageServerAddress = Image Server Address
 lblRegularExpression = Regular Expression
