@@ -1,3 +1,4 @@
+lblPicture = Afbeelding
 lblItemsPerPage=Items per pagina:
 msgLoginFailed=Aanmelden is mislukt
 msgLoginFailedDetails=De opgegeven username en/of het wachtwoord is onjuist. Corrigeer de aanmeldgegevens en probeet her opnieuw.
